<resources>
    <string name="app_name" translatable="false">StreamRecorder</string>
    <string name="title_activity_main" translatable="false">Stream Recorder</string>
    <string name="Unable_to_prepare_MediaRecorder">Unable to prepare MediaRecorder</string>
    <string name="Unable_to_start_MediaRecorder">Unable to start MediaRecorder</string>
    <string name="Unable_to_create_directory_">Unable to create directory:</string>
    <string name="Recording">Recording</string>
    <string name="Unable_to_set_data_source">Unable to set data source</string>
    <string name="Unable_to_prepare_MediaPlayer">Unable to prepare MediaPlayer</string>
    <string name="Is_t_directory_">Is\'t directory!</string>
    <string name="Is_t_directory__">Is\'t directory:</string>
    <string name="Directory_doesn_t_exist__">Directory doesn\'t exist:</string>
    <string name="Remove">Remove</string>
    <string name="FileHasntRemoved">File hasn\'t removed.</string>
    <string name="TheFileRemovedSuccessfully">The file removed successfully.</string>
    <string name="RemoveFilePermanently">The following file will be permanently deleted:</string>
    <string name="RemoveURL">The following url will be permanently deleted:</string>
    <string name="Cancel">Cancel</string>
    <string name="Mic">Mic</string>
    <string name="Streams" translatable="false">Streams</string>
    <string name="title_activity_favorites_urls">Favorites URLs</string>
    <string name="action_settings">Settings</string>
    <string name="Save_Rec"><![CDATA[Save & Rec]]></string>
    <string name="Save">Save</string>
    <string name="URL" translatable="false">URL</string>
    <string name="Play">Play</string>
    <string name="Rec">Rec</string>
    <string name="clear">Clear</string>
    <string name="Show_player">Show player</string>
    <string name="title_activity_preexists_urls">Pre Exists</string>
    <string name="FileName">File Name</string>
    <string name="N_A">N/A</string>
    <string name="_AT_" translatable="false">\@</string>
    <string name="Close_player">Close player</string>
    <string name="Play_Pause">Play/Pause</string>
</resources>
